--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Firebase Service Account Keys (SENSITIVE)
+*firebase-adminsdk*.json
+lyfeumbria-firebase-adminsdk-*.json
+
 # dependencies
 /node_modules
 /.pnp
