--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "diagnose:google": "node diagnose-google-drive.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
