--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lyfe-casale",
-  "version": "0.1.0",
+  "version": "1.8",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "export": "next build",
+    "version:increment": "node increment-version.js",
+    "predeploy": "npm run version:increment && npm run build",
     "deploy": "npm run export && firebase deploy",
     "deploy:hosting": "firebase deploy --only hosting",
     "setup:google": "node setup-google-drive.js",
